# zview

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_pip.md  curses_zview.py  elf_parser.py  mcu_scraper.py  pyproject.toml  requirements.txt  zview.py  zview_tui.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  version_release.yml
.testing/: ui.py
backend/: elf_inspector.py  elf_parser.py  runner_parser.py  z_scraper.py
scripts/: requirements.txt  west-commands.yml
scripts/west_commands/: zview_tui.py  zview_tui_cmd.py
src/: logging_setup.py  orchestrator.py  runner_config.py  snapshot.py  zview_cli.py
src/backend/: base.py  elf_inspector.py  gdb.py  jlink.py  pyocd.py  recording.py  replay.py  z_scraper.py
src/frontend/: tui_mixin.py  tui_widgets.py  zview_tui.py
src/frontend/tui/: widgets.py
src/frontend/tui/views/: base.py  fatal_error.py  heap_detail.py  heap_list.py  thread_detail.py  thread_list.py
src/kernel/: heaps.py  layout.py  threads.py
tests/: test_cli.py  test_elf_parser.py  test_heap_detail_helpers.py  test_heap_walker.py  test_recording_replay.py  test_replay_integration.py  test_runner_parser.py  test_snapshot_roundtrip.py  test_thread_walker.py  test_tui_views.py  test_watermark.py  test_west_command.py  test_widgets.py  test_z_scraper.py  test_zview_controller.py
tests/fixtures/: zephyr.elf
tests/fixtures/recordings/: sys_heap_v4.3.golden.json
tests/scripts/: generate_golden.py  record_fixture.py
zephyr/: module.yml  zview.rst
