[project]
name = "zview"
version = "0.3.2"
authors = [{ name = "Paulo Santos", email = "pauloxrms@gmail.com" }]
description = "ZView, a Zephyr RTOS runtime visualizer"
dependencies = ["PyYAML", "pyelftools", "pyocd", "pylink-square"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/wkhadgar/zview"
Issues = "https://github.com/wkhadgar/zview/issues"

[project.scripts]
zview = "zview_tui:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["zview_tui"]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
