[project]
name = "zview"
version = "0.3.3"
authors = [{ name = "Paulo Santos", email = "pauloxrms@gmail.com" }]
description = "ZView, a Zephyr RTOS runtime visualizer"
dependencies = ["PyYAML", "pyelftools", "pyocd", "pylink-square"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/wkhadgar/zview"
Issues = "https://github.com/wkhadgar/zview/issues"

[project.scripts]
zview = "zview_tui:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["zview_tui"]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "SIM", # flake8-simplify
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
ignore = [
  "SIM108", # Allow if-else blocks instead of forcing ternary operator
]

[tool.ruff.format]
quote-style = "preserve"
line-ending = "lf"
