[project]
name = "zview"
version = "0.5.1"
authors = [{ name = "Paulo Santos", email = "pauloxrms@gmail.com" }]
description = "ZView, a Zephyr RTOS runtime visualizer"
dependencies = ["PyYAML", "pyelftools", "pyocd", "pylink-square"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Embedded Systems",
]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
  "Zephyr",
  "RTOS",
  "Zephyr RTOS",
  "threads",
  "stacks",
  "heaps",
  "analyser",
  "ZView",
  "tooling",
  "module",
]

[project.urls]
Homepage = "https://github.com/wkhadgar/zview"
Issues = "https://github.com/wkhadgar/zview/issues"

[project.scripts]
zview = "zview_cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["zview_cli"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "SIM", # flake8-simplify
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
ignore = [
  "SIM108", # Allow if-else blocks instead of forcing ternary operator
  "E402",   # Allow module-level import outside top of file
]

[tool.ruff.format]
quote-style = "preserve"
line-ending = "lf"
